# sunlo-tanstack

./: .env.example  .prettierignore  .prettierrc.json  README.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  prettier.config.mjs  tailwind.config.js  todo.txt  tsconfig.app.json  vite.config.ts
.husky/: pre-commit
app/(app)/: error.tsx  navbar.tsx
app/data/: fetchers.ts  hooks.ts  reviews.ts
app/getting-started/: client.tsx
app/language/: page.tsx
old-components/: big-phrase.tsx  card.tsx  edit-status-buttons.tsx  select-multiple-languages.tsx
src/: main.tsx  routeTree.gen.ts  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: LabelInputInfo.tsx  SuccessCheckmark.tsx  auth-context.tsx  avatar.tsx  confirm-destructive-action-dialog.tsx  errors.tsx  field-info.tsx  flash-card-review-session.tsx  garlic.tsx  invite-by-email-form.tsx  language-phrases-accordion.tsx  loading.tsx  login-form.tsx  modal-with-opener.tsx  modal.tsx  mode-toggle.tsx  native-share-button.tsx  navbar.tsx  profile-creation-form.tsx  profile-with-relationship.tsx  select-language-you-know-react-select.tsx  select-language-you-know.tsx  select-multiple-languages.tsx  select-one-language.tsx  sidebar.tsx  theme-provider.tsx  translations-add-modal.tsx  translations-section.tsx
src/lib/: dayjs.ts  friends.ts  hooks.ts  languages.ts  mutate-deck.ts  reuse-loaders.ts  supabase-client.ts  use-debounce.ts  use-deck.ts  use-language.ts  use-profile.ts  utils.ts
src/routes/: __root.tsx  _app.tsx  _auth.forgot-password.tsx  _auth.login.tsx  (+13 more)
(+125 files in other folders)
