[package]
name = "sunlo-tanstack"
version = "0.1.0"
description = "Sunlo: Social Language Learning"
authors = ["@michaelsnook"]
license = "be-nice"
repository = "https://github.com/michaelsnook/sunlo-tanrouter.git"
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.10", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.11", features = [] }
